# OPENDROID

./: README.md  configure.ac
etc/: Makefile.am
po/: Makefile.am
src/: Makefile.am  maintainer.info  setup.xml
src/icons/: Makefile.am
src/images/: Makefile.am
